:bug: made error text alignment perfect

--- a/src/components/pages/authentication/Authentication.module.css
+++ b/src/components/pages/authentication/Authentication.module.css
@@ -46,7 +46,7 @@
 
 .inputErrorText {
   position: absolute;
-  top: 3px;
+  top: 4px;
   right: 16px;
   color: var(--orange-red);
   font-size: 13px;
